# modmark

./: CNAME  CONTRIBUTE.md  Cargo.toml  LICENSE  MODMARK.md  README.md  REFERENCE.md  compiler.js  index.html  licenses.txt
.github/workflows/: DeployMain.yml  DeployPages.yml  DeployPreview.yml  RustCI.yml
assets/: index-89394427.css
cli/: Cargo.toml  README.md  in.txt
cli/src/: error.rs  file_access.rs  main.rs  package.rs  preview_injection.html  templates.json
core/: Cargo.toml  build.rs
core/src/: context.rs  element.rs  error.rs  fs.rs  lib.rs  loaded_module.rs  native_fs.rs  package.rs  package_manager.rs  package_store.rs  schedule.rs  std_packages.rs  std_packages_macros.rs  variables.rs  web_fs.rs
module-tests/: Cargo.toml
module-tests/tests/: module_tests.rs
modules/: README.md
modules/bold/: Cargo.toml
modules/bold/src/: main.rs
modules/html/: Cargo.toml
modules/html/src/: example.json  main.rs
modules/latex/: Cargo.toml
modules/latex/src/: main.rs
modules/link/src/: example2.json  main.rs
modules/list/src/: main.rs
modules/table/: Cargo.toml
modules/table/src/: example.json  main.rs
modules/test-module/: Cargo.toml
modules/test-module/src/: main.rs
package-tests/: Cargo.toml  README.md
package-tests/tests/: package_tests.rs
parser/: Cargo.toml  README.md  example.mdm  syntax.mdm  test.mdm
parser/src/: config.rs  lib.rs  module.rs  or.rs  punct.rs  tag.rs
parser/tests/: compilation_test.rs  parser_tests.rs
parser/tests/compilation_tests/: heading_levels.mdmtest  headings_and_paragraphs.mdmtest  headings_in_blocks.mdmtest  headings_with_tags.mdmtest  inline_module.mdmtest  invalid_module_invocation.mdmtest  invocation_corner_cases.mdmtest  invocation_with_named_arguments.mdmtest  invocation_with_unnamed_arguments.mdmtest  invocation_with_unnamed_then_named.mdmtest  invocation_without_arguments.mdmtest  leading_rows_paragraph.mdmtest  multiline_module.mdmtest  multiple_paragraphs.mdmtest  non_stacked_tags.mdmtest  non_stacked_tags_different_paragraphs.mdmtest  simple_paragraph.json  simple_paragraph.mdm  simple_paragraph.mdmtest  smart_punctuation_mixed_quotes.mdmtest  smart_punctuation_quotes.mdmtest  smart_punctuation_sequences.mdmtest  stacked_tags.mdmtest  trailing_rows_paragraph.mdmtest
pkg/: web_bindings.d.ts  web_bindings.js  web_bindings_bg.wasm.d.ts
playground/: build-playground.sh  index.html  readme.md  style.css
playground/static/: compiler.js  example.mdm  index.html  main.js  main.mjs  style.css
playground/web_bindings/: .gitignore  Cargo.toml
playground/web_bindings/src/: fetch_file.js  lib.rs  web_resolve.rs  web_resolver.rs
pr-preview/pr-124/: main.js
pr-preview/pr-124/pkg/: web_bindings.js
pr-preview/pr-126/pkg/: web_bindings.d.ts
pr-preview/pr-139/: example.mdm  index.html
pr-preview/pr-139/pkg/: package.json
pr-preview/pr-158/: style.css
pr-preview/pr-158/pkg/: web_bindings.d.ts  web_bindings.js  web_bindings_bg.wasm.d.ts
pr-preview/pr-214/: compiler.js  main.js
pr-preview/pr-214/pkg/: web_bindings.d.ts  web_bindings.js  web_bindings_bg.wasm.d.ts
pr-preview/pr-247/pkg/: web_bindings.d.ts  web_bindings.js  web_bindings_bg.wasm.d.ts
pr-preview/pr-336/: index.html
pr-preview/pr-336/assets/: index-2a9b30cb.js  index-82302817.css
pr-preview/pr-336/web_bindings/: package.json  web_bindings.d.ts  web_bindings.js  web_bindings_bg.wasm.d.ts
pr-preview/pr-383/: index.html
pr-preview/pr-383/assets/: worker-257f0fd7.js
pr-preview/pr-383/web_bindings/: web_bindings.d.ts  web_bindings.js  web_bindings_bg.wasm.d.ts
pr-preview/pr-384/: index.html
pr-preview/pr-384/assets/: index-adbb3cad.css  worker-3808c276.js
pr-preview/pr-384/web_bindings/: web_bindings.d.ts  web_bindings.js  web_bindings_bg.wasm.d.ts
web_bindings/: web_bindings.d.ts  web_bindings.js  web_bindings_bg.wasm.d.ts
website/: .prettierrc  build_website.sh  index.html  package-lock.json  package.json  readme.md  tsconfig.json  vite.config.ts
website/src/: Buttons.tsx  FsTree.tsx  Gist.tsx  Guide.tsx  GuidePage.tsx  Homepage.tsx  PackageDocs.tsx  PackageDocsPage.tsx  Playground.tsx  Preview.tsx  compilerTypes.ts  gist.ts  main.css  main.tsx  welcomeMessage.tsx  worker.js
website/src/app/: main.tsx
website/src/app/guide/: GuidePage.tsx
website/src/app/homepage/: Homepage.tsx
website/src/app/packagedocs/: PackageDocsPage.tsx
website/src/app/playground/: FsTree.tsx  Playground.tsx  Preview.tsx  gist.ts
website/src/components/: Guide.tsx  PackageDocs.tsx  worker.js
website/src/theme/: GlobalStyle.ts  ThemeProvider.tsx  styled.d.ts
website/src/types/: compiler.d.ts
website/web_bindings/: Cargo.toml
website/web_bindings/src/: lib.rs
