[workspace]
members = [
    "cli",
    "core",
    "parser",
    "package-tests"
]

exclude = ["packages/table", "packages/html", "packages/latex" "packages/code", "playground/web_bindings"]

# We need to specifiy that we use the new resolver to
# get wasmer to build correctly when using a workspace
# for some reason
resolver = "2"
