[package]
name = "modmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { version = "*", path = "../parser/" }
modmark_core = { version = "*", path = "../core/", default-features = false, features = ["native"] }
clap = { version = "4.1.4", features = ["derive"] }
notify = "5.0.0"
crossterm = "0.26.0"
thiserror = "1.0.38"
directories = "5.0.0"
once_cell = "1.17.1"
tokio = { version = "1.25.0", features = ["full"] }
async-trait = "0.1.64"
reqwest = { version = "0.11.14", features = ["json"] }
serde_json = "1.0.93"
futures = "0.3.26"

[features]
default = ["modmark_core/bundle_std_packages"]
