[package]
name = "modmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { version = "*", path = "../parser/" }
modmark_core = { version = "*", path = "../core/", default-features = false, features = ["native"] }
clap = { version = "4.1.4", features = ["derive"] }
crossterm = "0.26.0"
thiserror = "1.0.38"
directories = "5.0.0"
once_cell = "1.17.1"
async-trait = "0.1.64"
reqwest = { version = "0.11.14", features = ["json"] }
serde_json = "1.0.93"
futures = "0.3.26"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.12"
warp = "0.3.3"
futures-util = "0.3.27"
portpicker = "0.1.1"
notify =  { version = "5.1.0", default-features = false, features = ["macos_kqueue"] }
walkdir = "2"
[features]
default = ["modmark_core/bundle_std_packages"]
