[package]
name = "core"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { version = "*", path = "../parser/" }
wasmer = { version = "3.1.1", default-features = false }
wasmer-wasi = { version = "3.1.1", default-features = false }
thiserror = "1.0.38"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
either = "1.8.1"


# Use the "web" feature to support web builds with:
[features]
# `wasm-pack build --target web`
default = ["native", "bundle_std_packages"]
native = ["wasmer/sys-default", "wasmer-wasi/sys-default"]
web = ["wasmer/js-default", "wasmer-wasi/js"]
bundle_std_packages = []
