[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"

[dev-dependencies]
json = "0.12.4"
datatest-stable = "0.1.3"

[[test]]
name = "compilation_test"
harness = false
