[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
thiserror = "1.0.38"
paste = "1.0.11"
serde = {version = "1.0.152", features = ["derive"]}

[dev-dependencies]
json = "0.12.4"
datatest-stable = "0.1.3"
diffy = "0.3.0"

[[test]]
name = "compilation_test"
harness = false
serde = {version = "1.0.152", features = ["derive"]}
